fix:menu behind progress bar style issue

--- a/src/app/dashboard/Components/KanbanBoard/KanbanBoard.scss
+++ b/src/app/dashboard/Components/KanbanBoard/KanbanBoard.scss
@@ -86,6 +86,8 @@
                 right: 0;
                 width: 80px;
 
+                z-index: 6;
+
                 background-color: var(--dark02);
                 border-radius: 0.5rem;
                 overflow: hidden;
